# Upwork-cuda_mlp_program

./: CMakeLists.txt  README.md  coordinates_dataset.cu  coordinates_dataset.h  main.cu  neural_network.cu  neural_network.h
layers/: linear_layer.cu  linear_layer.h  nn_layer.h  relu_activation.cu  relu_activation.h  sigmoid_activation.cu  sigmoid_activation.h
nn_utils/: bce_cost.cu  bce_cost.h  matrix.cu  matrix.h  nn_exception.h
test/: cuda_mlp_execution.ipynb
